resolve problem with horizontal scroll

--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 60px 24px 0;
+    padding: 60px 0 ;
+}
+
+.blog .container {
+    padding: 0 24px;
 }
 
 .blog__header {
@@ -44,9 +48,12 @@
     margin-bottom: 15px;
 }
 
+.blog__acticles-overview img {
+    border-radius: 6px;
+}
+
 .blog__article {
     max-width: 345px;
-    padding: 0 15px 0;
     margin-bottom: 30px;
 }
 
@@ -64,31 +71,6 @@
     line-height: 29px;
     color: var(--text-color);
     margin-bottom: 35px;
-}
-
-.main-btn {
-    background-color: var(--brand-color);
-    padding: 15px 30px;
-    width: 140px;
-    height: 50px;
-    border-radius: 27px;
-    cursor: pointer;
-}
-
-.main-btn:hover {
-    background-color: var(--button-hover);
-    transition: 0.2s;
-}
-
-.main-btn__text {
-    text-decoration: none;
-    color: var(--button-text-color);
-    font-family: "Source Sans Pro";
-    font-size: 0.94rem;
-}
-
-.wave-container {
-    margin: 0 -23px ;
 }
 
 .wave-img {
